# Database-Sharding

./: .env.example  .gitignore  README.md  celery_worker.py  database.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 88ba32b19333_initial_migration.py
configs/: config.py
docker/: Dockerfile  entrypoint.sh
libraries/: celery.py  redis.py
models/: base.py  product.py  review.py  user.py
routers/: product.py  review.py  user.py
schema/: product.py  response.py  review.py  user.py
scripts/: migrate.py  resharding_backfill.py  resharding_cutover.py  resharding_decommission.py  resharding_wipe.py  seed.py
sharding/: ring.py  router.py
tasks/: dummy_tasks.py
